[package]
name = "kant-router"
description = "A Wikidot-compatible router for web applications"
repository = "https://github.com/Nu-SCPTheme/kant-router"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "router", "web", "nuscp"]
categories = ["web-programming::http-server"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.6"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

[dependencies]
actix-files = "0.2"
actix-identity = "0.2"
actix-rt = "1"
actix-web = "2"
bytes = "*"
color-backtrace = "0.3"
futures = "*"
log = "0.4"
maplit = "1"
pretty_env_logger = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
toml = "0.5"
wikidot-path = "0.0.3"
