[package]
name = "thaumiel"
description = "Wikidot-like web server to provide pages, forums, and other services"
repository = "https://github.com/Nu-SCPTheme/thaumiel"
readme = "README.md"
license = "AGPL-3.0-or-later"
keywords = ["wikidot", "web", "server", "nuscp"]
categories = ["web-programming::http-server", "asynchronous"]
exclude = [".gitignore", ".travis.yml"]

version = "0.0.7"
authors = ["Ammon Smith <ammon.i.smith@gmail.com>"]
edition = "2018" # this refers to the Cargo.toml version

build = "build.rs"

[dependencies]
actix-files = "0.2"
actix-identity = "0.2"
actix-rt = "1"
actix-web = "2"
bytes = "0.5"
color-backtrace = "0.3"
deadpool = { version = "0.5", features = ["unmanaged"] }
deepwell-core = { path = "../deepwell/deepwell-core" }
deepwell-rpc = { path = "../deepwell-rpc" }
dns-lookup = "1"
ftml = { path = "../ftml" }
ftml-rpc = { path = "../ftml-rpc" }
futures = "0.3"
lazy_static = "1"
log = "0.4"
maplit = "1"
pretty_env_logger = "0.4"
regex = "1.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
toml = "0.5"
wikidot-path = "0.1"

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }
